# flatbuffers_modifier

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
flatbuffers_modifier/: __init__.py
scripts/: install_flatc.py
tests/: conftest.py  flatbuffers_pool.py  install_flatc.py  test_flatbuffers_modifier.py  test_flatbuffers_visitor.py
tests/data/: monster.fbs
